videowidget: reimplment video widget base on opengl base
- reimplement preview and distant video widget based on opengl
- cuda and qsv accelerated decoding pipline is compatible with
  this opengl video widget, which can run two-way 4K video on
  30 fps smoothly
- resizeing of call window is much more smooth
- rounded corner is not possible with this design yet
- to preserve rounded corner, photobooth and record widget are
  using old pipline now
- due to avframe and frame pipline can only run with one of them,
  photobooth is not functional yet when video call is on

Change-Id: If5baae8b932eb87d77894a1a5f20a99a62b4894e

--- a/ressources.qrc
+++ b/ressources.qrc
@@ -101,5 +101,7 @@
         <file>images/icons/av_icons/send-24px.svg</file>
         <file>images/icons/av_icons/stop-24px.svg</file>
         <file>images/icons/av_icons/mic-24px.svg</file>
+        <file>shader/YUVConv.frag</file>
+        <file>shader/YUVConv.vert</file>
     </qresource>
 </RCC>
