--- a/src/settingswidget.ui
+++ b/src/settingswidget.ui
@@ -4102,7 +4102,7 @@
                          <height>224</height>
                         </size>
                        </property>
-                       <layout class="QHBoxLayout" name="videoLayout" stretch="1,0,1">
+                       <layout class="QHBoxLayout" name="videoLayout" stretch="0">
                         <property name="spacing">
                          <number>0</number>
                         </property>
@@ -4119,23 +4119,7 @@
                          <number>0</number>
                         </property>
                         <item>
-                         <spacer name="horizontalSpacer_23">
-                          <property name="orientation">
-                           <enum>Qt::Horizontal</enum>
-                          </property>
-                          <property name="sizeType">
-                           <enum>QSizePolicy::Expanding</enum>
-                          </property>
-                          <property name="sizeHint" stdset="0">
-                           <size>
-                            <width>40</width>
-                            <height>20</height>
-                           </size>
-                          </property>
-                         </spacer>
-                        </item>
-                        <item>
-                         <widget class="PreviewWidget" name="previewWidget" native="true">
+                         <widget class="GLPreviewWidget" name="previewWidget" native="true">
                           <property name="enabled">
                            <bool>true</bool>
                           </property>
@@ -4153,7 +4137,7 @@
                           </property>
                           <property name="maximumSize">
                            <size>
-                            <width>400</width>
+                            <width>500</width>
                             <height>16777215</height>
                            </size>
                           </property>
@@ -4164,22 +4148,6 @@
                            </size>
                           </property>
                          </widget>
-                        </item>
-                        <item>
-                         <spacer name="horizontalSpacer_24">
-                          <property name="orientation">
-                           <enum>Qt::Horizontal</enum>
-                          </property>
-                          <property name="sizeType">
-                           <enum>QSizePolicy::Expanding</enum>
-                          </property>
-                          <property name="sizeHint" stdset="0">
-                           <size>
-                            <width>40</width>
-                            <height>20</height>
-                           </size>
-                          </property>
-                         </spacer>
                         </item>
                        </layout>
                       </widget>
@@ -4303,7 +4271,7 @@
    <container>1</container>
   </customwidget>
   <customwidget>
-   <class>PreviewWidget</class>
+   <class>GLPreviewWidget</class>
    <extends>QWidget</extends>
    <header>previewwidget.h</header>
    <container>1</container>
