d3d11qml: embed d3d11 renderer into qml-based client
Change-Id: I71e1ca451396f46f5935dff565787868f0b0ad2e

--- a/ressources.qrc
+++ b/ressources.qrc
@@ -101,5 +101,6 @@
         <file>images/icons/av_icons/send-24px.svg</file>
         <file>images/icons/av_icons/stop-24px.svg</file>
         <file>images/icons/av_icons/mic-24px.svg</file>
+        <file>src-gpu/ShaderJami.hlsl</file>
     </qresource>
 </RCC>
