--- a/qml.qrc
+++ b/qml.qrc
@@ -3,5 +3,6 @@
         <file>src/KeyBoardShortcutTable.qml</file>
         <file>src/KeyBoardShortcutKey.qml</file>
         <file>src/UserProfileCard.qml</file>
+        <file>src/VideoPreviewBase.qml</file>
     </qresource>
 </RCC>
