--- a/qml.qrc
+++ b/qml.qrc
@@ -1,5 +1,15 @@
 <RCC>
     <qresource prefix="/">
+        <file>src/wizardview/WizardView.qml</file>
+        <file>src/wizardview/components/WelcomePageLayout.qml</file>
+        <file>src/wizardview/components/CreateAccountPage.qml</file>
+        <file>src/wizardview/components/CreateSIPAccountPage.qml</file>
+        <file>src/wizardview/components/ImportFromBackupPage.qml</file>
+        <file>src/wizardview/components/BackupKeyPage.qml</file>
+        <file>src/wizardview/components/ImportFromDevicePage.qml</file>
+        <file>src/wizardview/components/ConnectToAccountManagerPage.qml</file>
+        <file>src/wizardview/components/SpinnerPage.qml</file>
+        <file>src/wizardview/components/CollapsiblePasswordWidget.qml</file>
         <file>src/mainview/components/KeyBoardShortcutTable.qml</file>
         <file>src/mainview/components/KeyBoardShortcutKey.qml</file>
         <file>src/mainview/components/UserProfileCard.qml</file>
