--- a/qml.qrc
+++ b/qml.qrc
@@ -23,5 +23,16 @@
         <file>src/mainview/components/CallOverlay.qml</file>
         <file>src/commoncomponents/TintedButton.qml</file>
         <file>src/mainview/components/CallOverlayButtonGroup.qml</file>
+
+
+        <file>src/wizardview/WizardView.qml</file>
+        <file>src/wizardview/components/WelcomePageLayout.qml</file>
+        <file>src/wizardview/components/CreateAccountPage.qml</file>
+        <file>src/wizardview/components/CreateSIPAccountPage.qml</file>
+        <file>src/wizardview/components/ImportFromBackupPage.qml</file>
+        <file>src/wizardview/components/BackupKeyPage.qml</file>
+        <file>src/wizardview/components/ImportFromDevicePage.qml</file>
+        <file>src/wizardview/components/ConnectToAccountManagerPage.qml</file>
+        <file>src/wizardview/components/SpinnerPage.qml</file>
     </qresource>
 </RCC>
