wizard view: new wizard in qml
Change-Id: I8e66c4a56fbfd2d90438fb385d298f1ac048b762

--- a/qml.qrc
+++ b/qml.qrc
@@ -5,6 +5,7 @@
         <file>src/mainview/components/UserProfileCard.qml</file>
         <file>src/MainApplicationWindow.qml</file>
         <file>src/mainview/MainView.qml</file>
+        <file>src/WizardView.qml</file>
         <file>src/commoncomponents/CustomBorder.qml</file>
         <file>src/constant/JamiTheme.qml</file>
         <file>src/mainview/components/AboutPopUp.qml</file>
