--- a/qml.qrc
+++ b/qml.qrc
@@ -7,6 +7,7 @@
         <file>src/MainView.qml</file>
         <file>src/CustomBorder.qml</file>
         <file>src/ColorConstant.qml</file>
+        <file>src/WizardView.qml</file>
         <file>src/AboutPopUp.qml</file>
     </qresource>
 </RCC>
