wizard view: new wizard in qml
Change-Id: I8e66c4a56fbfd2d90438fb385d298f1ac048b762

--- a/qml.qrc
+++ b/qml.qrc
@@ -7,5 +7,6 @@
         <file>src/MainView.qml</file>
         <file>src/CustomBorder.qml</file>
         <file>src/ColorConstant.qml</file>
+        <file>src/WizardView.qml</file>
     </qresource>
 </RCC>
