wizard view: new wizard in qml
Change-Id: I8e66c4a56fbfd2d90438fb385d298f1ac048b762

--- a/qml.qrc
+++ b/qml.qrc
@@ -4,5 +4,6 @@
         <file>src/KeyBoardShortcutKey.qml</file>
         <file>src/UserProfileCard.qml</file>
         <file>src/MainApplicationWindow.qml</file>
+        <file>src/WizardView.qml</file>
     </qresource>
 </RCC>
