--- a/qml.qrc
+++ b/qml.qrc
@@ -15,5 +15,14 @@
         <file>src/mainview/components/MessageWebViewHeader.qml</file>
         <file>src/commoncomponents/HoverableButton.qml</file>
         <file>src/mainview/components/AccountComboBox.qml</file>
+        <file>src/wizardview/WizardView.qml</file>
+        <file>src/wizardview/components/WelcomePageLayout.qml</file>
+        <file>src/wizardview/components/CreateAccountPage.qml</file>
+        <file>src/wizardview/components/CreateSIPAccountPage.qml</file>
+        <file>src/wizardview/components/ImportFromBackupPage.qml</file>
+        <file>src/wizardview/components/BackupKeyPage.qml</file>
+        <file>src/wizardview/components/ImportFromDevicePage.qml</file>
+        <file>src/wizardview/components/ConnectToAccountManagerPage.qml</file>
+        <file>src/wizardview/components/SpinnerPage.qml</file>
     </qresource>
 </RCC>
