wizard view: new wizard in qml
Change-Id: I8e66c4a56fbfd2d90438fb385d298f1ac048b762

--- a/qml.qrc
+++ b/qml.qrc
@@ -14,5 +14,6 @@
         <file>src/mainview/components/MessageWebView.qml</file>
         <file>src/mainview/components/MessageWebViewHeader.qml</file>
         <file>src/commoncomponents/HoverableButton.qml</file>
+        <file>src/wizardview/WizardView.qml</file>
     </qresource>
 </RCC>
