wizard view: new wizard in qml
Change-Id: I8e66c4a56fbfd2d90438fb385d298f1ac048b762

--- a/qml.qrc
+++ b/qml.qrc
@@ -5,6 +5,7 @@
         <file>src/mainview-components/UserProfileCard.qml</file>
         <file>src/MainApplicationWindow.qml</file>
         <file>src/MainView.qml</file>
+        <file>src/WizardView.qml</file>
         <file>src/qmlcomponentutils/CustomBorder.qml</file>
         <file>src/qmlconstant/ColorConstant.qml</file>
         <file>src/mainview-components/AboutPopUp.qml</file>
